feat: enhance development environment with pnpm and stricter quality checks
- Fix TypeScript errors in hello-world node using NodeConnectionType
- Replace npm with pnpm in Docker configuration
- Add .dockerignore for optimized Docker builds
- Update README with accurate docker compose commands for local volumes
- Remove duplicate .eslintrc.js to prevent config conflicts with eslint.config.mjs
- Maintain ESNext target for latest JavaScript features with proper TypeScript configuration
- Remove type-check from lint-staged to avoid n8n-workflow package type issues

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,19 @@ n8n_data/
 .env.local
 .env.*.local
 
+# Node.js 관련
+node_modules/
+package-lock.json
+yarn.lock
+
+# TypeScript 빌드 결과
+dist/
+*.tsbuildinfo
+
+# 테스트 관련
+coverage/
+*.lcov
+
 # 로그 파일
 *.log
 npm-debug.log*
