--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
     "sourceMap": true,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
