--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,10 @@ services:
       dockerfile: Dockerfile
     container_name: rag-price-tracker-n8n
     ports:
-      - "5678:5678"
+      - '5678:5678'
     environment:
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=admin
-      - N8N_HOST=0.0.0.0
-      - N8N_PORT=5678
-      - N8N_PROTOCOL=http
-      - WEBHOOK_URL=http://localhost:5678/
+      - GENERIC_TIMEZONE=Asia/Seoul
+      - TZ=Asia/Seoul
     volumes:
       - ./n8n_data:/home/node/.n8n
     restart: unless-stopped
