refactor: RAG Price Tracker에서 n8n 커스텀 노드 개발 템플릿으로 전환
- 프로젝트 목적 변경: 가격 추적 시스템 → 커스텀 노드 개발 환경
- README.md: 전체 내용을 커스텀 노드 개발 가이드로 변경
  - 기능: RAG 기반 가격 추적 → 노드 개발 도구
  - 기술 스택: 가격 추적 관련 도구들 → 노드 개발 도구들
  - 워크플로우: 가격 추적 워크플로우 → 노드 개발 워크플로우
- docker-compose.yml: 컨테이너 이름 변경 (rag-price-tracker-n8n → n8n-custom-nodes)
- package.json: 프로젝트 이름 및 설명 변경
  - name: rag-price-tracker-nodes → n8n-custom-nodes-starter
  - description: RAG Price Tracker → n8n Custom Nodes Development Starter Kit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rag-price-tracker-nodes",
+  "name": "n8n-custom-nodes-starter",
   "version": "1.0.0",
-  "description": "RAG Price Tracker - n8n Custom Nodes",
+  "description": "n8n Custom Nodes Development Starter Kit with Docker",
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist",
