--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: rag-price-tracker-n8n
+    container_name: n8n-custom-nodes
     ports:
       - '5678:5678'
     environment:
